deployed && added readme && metadata for pages

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
-  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="description" content="Securely store, organize, and share your files with FileVault. The easiest way to manage your digital assets." />
+    <title>FileVault - Secure File Sharing</title>
   </head>
   <body>
     <div id="root"></div>
